Add more description on home page

--- a/src/pages/epoch-converter/epoch-converter.html
+++ b/src/pages/epoch-converter/epoch-converter.html
@@ -11,6 +11,17 @@
   <main>
     <div id="banner"></div>
 
+    <ion-card id="epoch-clock-card">
+      <ion-card-header>
+        Unix Epoch Clock
+      </ion-card-header>
+      <ion-card-content>
+        <p>
+          {{ currentTime }}
+        </p>
+      </ion-card-content>
+    </ion-card>
+
     <ion-card id="epoch-time-card">
       <ion-card-header>
         Unix Epoch Time
