Minor color change on the design

--- a/src/pages/epoch-converter/epoch-converter.html
+++ b/src/pages/epoch-converter/epoch-converter.html
@@ -18,7 +18,7 @@
       </ion-card-header>
       <ion-card-content>
         <div id="clock-seconds">
-            <p>{{ currentSeconds }}</p>
+          <p>{{ currentSeconds }}</p>
         </div>
         <p padding>
           seconds elapsed since January 1, 1970
@@ -28,6 +28,7 @@
 
     <ion-card id="intro-card">
       <ion-card-header>
+        <ion-icon name="help"></ion-icon>
         What is Epoch Converter?
       </ion-card-header>
       <ion-card-content>
@@ -35,13 +36,14 @@
           The Unix epoch (or Unix time or POSIX time or Unix timestamp) is the number of seconds that have elapsed since January 1, 1970 (midnight UTC/GMT), not counting leap seconds.
         </p>
         <p>
-          This Epoch Converter tool helps you to conveniently convert between epoch timestamp seconds and human readable time. Type in the timestamp on the cards down below and the corresponding time will be converted.
+          This Epoch Converter tool helps you to conveniently convert between epoch timestamp seconds and human readable time. Type in the timestamp on the cards and the corresponding time will be converted.
         </p>
       </ion-card-content>
     </ion-card>
 
     <ion-card id="epoch-time-card">
       <ion-card-header>
+        <ion-icon name="timer"></ion-icon>
         Unix Epoch Time
       </ion-card-header>
       <ion-card-content>
@@ -55,6 +57,7 @@
 
     <ion-card id="human-time-card">
       <ion-card-header>
+        <ion-icon name="time"></ion-icon>
         Human Readable Time
       </ion-card-header>
       <ion-card-content>
