Enable deep links for SEO

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -33,7 +33,7 @@
       <p>
       Epoch Time Converter can help you easily convert from Unix (Epoch) time to human readable time. Or from a human readable timestamp to the miliseconds since Epoch time.
       </p>
-      <button [navPush]="epochConverter" ion-button>Epoch Converter</button>
+      <button [navPush]="'epoch-converter'" ion-button>Epoch Converter</button>
     </ion-card-content>
   </ion-card>
 
@@ -45,7 +45,7 @@
       <p>
       Floating Point Converter can help you easily convert single (32-bit) or double (64-bit) precision floating-point values to its IEEE Standard 754 floating point in binary and hexdecimal representation.
       </p>
-      <button [navPush]="floatConverter" ion-button>Floating Point Converter</button>
+      <button [navPush]="'float-converter'" ion-button>Floating Point Converter</button>
     </ion-card-content>
   </ion-card>
 
