--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,12 @@
   <link rel="canonical" href="http://coderbox.io">
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/180c.png">
-  <link rel="apple-touch-icon-precomposed" href="passets/icon/152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/180f.png">
+  <link rel="apple-touch-icon-precomposed" href="assets/icon/152f.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/32c.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/16c.png">
   <link rel="manifest" href="manifest.json">
-  <link rel="mask-icon" href="/icon.svg" color="#283E4A">
+  <link rel="mask-icon" href="assets/icon/icon.svg" color="#283E4A">
   <meta name="msapplication-TileColor" content="#FFFFFF">
   <meta name="msapplication-TileImage" content="assets/icon/144.png">
   <meta name="theme-color" content="#283E4A">
