Start using icomoon for custom icon fonts

--- a/src/pages/epoch-converter/epoch-converter.html
+++ b/src/pages/epoch-converter/epoch-converter.html
@@ -28,7 +28,7 @@
 
     <ion-card id="intro-card">
       <ion-card-header>
-        <ion-icon name="help"></ion-icon>
+        <ion-icon name="about"></ion-icon>
         What is Epoch Converter?
       </ion-card-header>
       <ion-card-content>
@@ -43,7 +43,7 @@
 
     <ion-card id="epoch-time-card">
       <ion-card-header>
-        <ion-icon name="timer"></ion-icon>
+        <ion-icon name="epoch-converter"></ion-icon>
         Unix Epoch Time
       </ion-card-header>
       <ion-card-content>
@@ -57,7 +57,7 @@
 
     <ion-card id="human-time-card">
       <ion-card-header>
-        <ion-icon name="time"></ion-icon>
+        <ion-icon name="epoch-converter"></ion-icon>
         Human Readable Time
       </ion-card-header>
       <ion-card-content>
