--- a/src/pages/float-converter/float-converter.html
+++ b/src/pages/float-converter/float-converter.html
@@ -13,7 +13,7 @@
 
     <ion-card id="intro-card">
       <ion-card-header>
-        <ion-icon name="help"></ion-icon>
+        <ion-icon name="about"></ion-icon>
         What is Floating Point Converter?
       </ion-card-header>
       <ion-card-content>
@@ -28,7 +28,7 @@
 
     <ion-card id="float-card">
       <ion-card-header>
-        <ion-icon name="leaf"></ion-icon>
+        <ion-icon name="float-converter"></ion-icon>
         Floating Point
       </ion-card-header>
       <ion-card-content>
