--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,6 +13,7 @@
 
   <ion-card>
     <ion-card-header>
+      <ion-icon name="coderbox"></ion-icon>
       CoderBox.io
     </ion-card-header>
     <ion-card-content>
@@ -27,6 +28,7 @@
 
   <ion-card>
     <ion-card-header>
+      <ion-icon name="epoch-converter"></ion-icon>
       Epoch Time Converter
     </ion-card-header>
     <ion-card-content>
@@ -39,6 +41,7 @@
 
   <ion-card>
     <ion-card-header>
+      <ion-icon name="float-converter"></ion-icon>
       Floating Point Converter
     </ion-card-header>
     <ion-card-content>
@@ -60,15 +63,15 @@
     </ion-card-content>
     <ion-list>
       <button ion-item>
-        <ion-icon name="code-working" item-start></ion-icon>
+        <ion-icon name="character-encoder" item-start></ion-icon>
         Character Encoding Converter
       </button>
       <button ion-item>
-        <ion-icon name="code-working" item-start></ion-icon>
+        <ion-icon name="character-encoder" item-start></ion-icon>
         Unicode Code Converter
       </button>
       <button ion-item>
-        <ion-icon name="code-working" item-start></ion-icon>
+        <ion-icon name="base64-encoder" item-start></ion-icon>
         Base64 Online Encoder/Decoder
       </button>
     </ion-list>
