Update icons for CoderBox.io

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,8 @@
 
   <ion-card>
     <ion-card-header>
-      <ion-icon name="coderbox"></ion-icon>
+      <ion-icon name="coderbox-grayscale">
+      </ion-icon>
       CoderBox.io
     </ion-card-header>
     <ion-card-content>
