--- a/src/index.html
+++ b/src/index.html
@@ -11,10 +11,10 @@
   <link rel="canonical" href="http://coderbox.io">
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/180f.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/icon/152f.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/32c.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/16c.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/180.png">
+  <link rel="apple-touch-icon-precomposed" href="assets/icon/152.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/16.png">
   <link rel="manifest" href="manifest.json">
   <link rel="mask-icon" href="assets/icon/icon.svg" color="#283E4A">
   <meta name="msapplication-TileColor" content="#FFFFFF">
@@ -50,6 +50,9 @@
 
   <!-- The main bundle js is generated during the build process -->
   <script src="build/main.js"></script>
+
+  <!-- Google Analytics -->
+  <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');ga('create', 'UA-100973436-2', 'auto');ga('send', 'pageview');</script>
 
 </body>
 </html>
