--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
   <link rel="canonical" href="http://coderbox.io">
 
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/180.png">
-  <link rel="apple-touch-icon-precomposed" href="assets/icon/152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/180f.png">
+  <link rel="apple-touch-icon-precomposed" href="assets/icon/152f.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/icon/32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/icon/16.png">
   <link rel="manifest" href="manifest.json">
