--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,18 @@
   <meta name="description" content="CoderBox developer online toolbox. Epoch time converter, floating point to HEX converter, base64 encoder/decoder..."
   <link rel="canonical" href="http://coderbox.io">
 
+  <!-- Social meta tags -->
+  <meta property="og:site_name" content="CoderBox">
+  <meta property="og:title" content="CoderBox">
+  <meta property="og:url" content="http://coderbox.io">
+  <meta property="og:image" content="http://coderbox.io/assets/meta/index.jpg" />
+  <meta property="og:image:type" content="image/jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:description" content="CoderBox developer online toolbox. Epoch time converter, floating point to HEX converter, base64 encoder/decoder..." />
+  <meta name="twitter:card" content="summary_large_image">
+
+  <!-- Icons -->
   <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="assets/icon/180f.png">
   <link rel="apple-touch-icon-precomposed" href="assets/icon/152f.png">
